# ai-config

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  GEMINI.md  README.md  pyproject.toml
config/: index_profiles.yaml  skills_sh_official.yaml  skills_sh_official_skipped.json  sources.yaml  vendor_skills.yaml
docs/: README.md  ai-development-progress-report.ja.md  architecture.md  constitution.md  development.md  dispatch-externalization-plan.md  dispatch-runtime-completion-workflow.md  operations.md  overview.md  product-direction.ja.md  rename-evaluation.md  repository_evaluation.ja.md
instructions/: Agent.md  Gemini.md  Lesson.md  README.md
inventory/: .gitkeep  mcp.antigravity.json  mcp.codex.json  mcp.gemini.json  skill-duplicates.json  skill-duplicates.md  skills.antigravity.json  skills.codex.json  skills.gemini.json  summary.json
mcp/: antigravity.mcp_config.json.tmpl  codex.config.toml.tmpl  weekly-report.bigquery_toolbox.prompt.md
schemas/: ai-sync.schema.json
scripts/: apply-mcp.ps1  audit-skill-duplicates.ps1  export-antigravity.ps1  export-inventory.ps1  fetch-repos.ps1  import-antigravity-awesome-skills.ps1  import-antigravity.ps1  import-skill.sh  import-skills-sh-top.ps1  register.ps1  register.sh  restore-ai-workspace.ps1  run-ga4-last7d-sessions-cvr.ps1  run_module.py  setup-env-interactive.ps1  setup.ps1  setup.sh  sync-all.ps1  sync-env-files.ps1  sync-instructions.ps1  sync-instructions.sh  sync-open-webui-export.ps1  sync-skills.ps1  test-dispatch-compat.sh
skills/: .gitkeep
tasks/: lessons.md  measure_tokens.py  todo.md
tests/: test_approved_plan_contract.py  test_cli_smoke.py  test_cloudrun_deploy_templates.py  test_cloudrun_production_assets.py  test_cloudrun_release_assets.py  test_cloudrun_staging_assets.py  test_dispatch_approved_plan.py  test_dispatch_cli_result_contract.py  test_dispatch_compat_shim.py  test_dispatch_fixes.py  test_dispatch_graph.py  test_dispatch_import_guard.py  test_dispatch_planner.py  test_dispatch_workflow.py  test_doctor.py  test_executor_adapters.py  test_executor_command_resolution.py  test_index_builder_contract.py  test_mcp_server_extended.py  test_mcp_server_tools.py  test_official_skills.py  test_plan_boundary.py  (+18 more)
(+1863 files in other folders)
