[project]
name = "ai-config"
version = "0.1.0"
description = "Dynamic skill and MCP selection platform with planner artifacts for AI agents"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.3",
    "langchain-google-genai>=2.0",
    "langchain-core>=0.3",
    "numpy>=1.26",
    "rank-bm25>=0.2",
    "pyyaml>=6.0",
    "python-frontmatter>=1.1",
    "python-dotenv>=1.0",
    "pydantic>=2.8",
    "mcp[cli]>=1.0",
    "SudachiPy>=0.6.10,<0.7",
    "sudachidict_core==20260116",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]
semantic = ["faiss-cpu>=1.9", "sentence-transformers>=3.0"]

[project.scripts]
ai-config-index = "ai_config.build_index:main"
ai-config-agent = "ai_config.orchestrator.cli:main"
ai-config-sources = "ai_config.source_manager:main"  # deprecated for skills; see docs/constitution.md
ai-config-vendor-skills = "ai_config.vendor.cli:main"
ai-config-mcp-server = "ai_config.mcp_server.server:main"
ai-config-selector-serving = "ai_config.mcp_server.serving:main"
ai-config-doctor = "ai_config.doctor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_config"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
